add CloudBread_Camp 7th edm

--- a/CloudBread/6th_camp_edm/CBCamp_06.html
+++ b/CloudBread/6th_camp_edm/CBCamp_06.html
@@ -8,43 +8,43 @@
 <table id="Table_01" width="700" height="3200" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="images/CBCamp_06_01.png" width="700" height="499" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_01.png" width="700" height="499" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="http://www.cloudbread.org">
-				<img src="images/CBCamp_06_02.png" width="700" height="101" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_02.png" width="700" height="101" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CBCamp_06_03.png" width="700" height="245" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_03.png" width="700" height="245" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="http://map.naver.com/?dlevel=11&pinType=site&pinId=11854542&x=127.0246412&y=37.5032378&enc=b64">
-				<img src="images/CBCamp_06_04.png" width="700" height="96" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_04.png" width="700" height="96" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CBCamp_06_05.png" width="700" height="1083" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_05.png" width="700" height="1083" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://github.com/CloudBreadProject/6th-Offline-Camp">
-				<img src="images/CBCamp_06_06.png" width="700" height="92" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_06.png" width="700" height="92" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CBCamp_06_07.png" width="700" height="619" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_07.png" width="700" height="619" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="http://www.facebook.com/groups/cloudBreadProject/">
-				<img src="images/CBCamp_06_08.png" width="700" height="86" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_08.png" width="700" height="86" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CBCamp_06_09.png" width="700" height="379" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/6th_camp_edm/images/CBCamp_06_09.png" width="700" height="379" alt=""></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
