--- a/CloudBread/7th_camp_edm/CloudBread_Camp_edm_7th.html
+++ b/CloudBread/7th_camp_edm/CloudBread_Camp_edm_7th.html
@@ -8,43 +8,43 @@
 <table id="Table_01" width="700" height="3200" border="0" cellpadding="0" cellspacing="0">
 	<tr>
 		<td>
-			<img src="images/CloudBread_Camp_edm_7th_01.png" width="700" height="506" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_01.png" width="700" height="506" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="http://www.cloudbread.org">
-				<img src="images/CloudBread_Camp_edm_7th_02.png" width="700" height="91" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_02.png" width="700" height="91" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CloudBread_Camp_edm_7th_03.png" width="700" height="257" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_03.png" width="700" height="257" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="http://map.naver.com/?lng=127.0528131&lat=37.5046038&dlevel=12&mapmode=0&pinId=18468993&pinType=site&enc=b64">
-				<img src="images/CloudBread_Camp_edm_7th_04.png" width="700" height="88" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_04.png" width="700" height="88" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CloudBread_Camp_edm_7th_05.png" width="700" height="1082" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_05.png" width="700" height="1082" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="https://github.com/CloudBreadProject/7th-Offline-Camp">
-				<img src="images/CloudBread_Camp_edm_7th_06.png" width="700" height="92" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_06.png" width="700" height="92" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CloudBread_Camp_edm_7th_07.png" width="700" height="627" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_07.png" width="700" height="627" alt=""></td>
 	</tr>
 	<tr>
 		<td>
 			<a href="http://aka.ms/cbfb">
-				<img src="images/CloudBread_Camp_edm_7th_08.png" width="700" height="81" border="0" alt=""></a></td>
+				<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_08.png" width="700" height="81" border="0" alt=""></a></td>
 	</tr>
 	<tr>
 		<td>
-			<img src="images/CloudBread_Camp_edm_7th_09.png" width="700" height="376" alt=""></td>
+			<img src="https://raw.githubusercontent.com/yshong93/Archive/master/CloudBread/7th_camp_edm/images/CloudBread_Camp_edm_7th_09.png" width="700" height="376" alt=""></td>
 	</tr>
 </table>
 <!-- End Save for Web Slices -->
